--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				
 				<h1>I'm Joshua O. Ponciano</h1><br>
 				<h3>I'm currently studying at Cavite State University,<br> as a Bachelor of Science and Information Technology 
-				 3rd year Student SY 2020-2021<br>and make this HTML Resume as my final Project for "Open Source Technology"  course subject.<br> Let's Start scrolling to learn more about me. </h3>
+				 2nd year Student SY 2020-2021<br>and make this HTML Resume as my final Project for "Open Source Technology"  course subject.<br> Let's Start scrolling to learn more about me. </h3>
 			</div>
 		
 	<div class="contents" >
